# NoW-Task-Planner

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.MD  tasks.json
.cache/clangd/index/: ArchiveWindow.cpp.16BCB910BFDA442D.idx  ArchiveWindow.cpp.64D509E136E1D269.idx  ArchiveWindow.h.44C941E2F03EBA2A.idx  ArchiveWindow.h.E3CB72E2F58087A4.idx  Button.cpp.3606ECC945A36074.idx  Button.h.211F13A2EE56D7EA.idx  Button.h.C76A72D35E9A4AD9.idx  CalendarWidget.cpp.671BF8CFDA98C040.idx  CalendarWidget.cpp.91568A08291D51F1.idx  CalendarWidget.h.855D0F22FA6C0970.idx  CalendarWidget.h.A3E097CC48B0A025.idx  CalendareWidget.cpp.50C43296DA8732D7.idx  CalendareWidget.h.72E6C9EABA4C5E9F.idx  CheckBox.h.2040B89E21DE8DD9.idx  CheckBox.h.B50E302C63F5FF50.idx  CreateWindow.cpp.0ABF1723EEFBC204.idx  CreateWindow.cpp.85B1475EB6578630.idx  CreateWindow.h.C407090781579C2C.idx  CreateWindow.h.D7DCB39EC195A378.idx  EditWindow.cpp.B9CAFF18BB874A89.idx  EditWindow.cpp.F98C749D5515355E.idx  EditWindow.h.8D54B5A4145B5744.idx  EditWindow.h.93E8A8E1D57D59B3.idx  ErrorManager.cpp.015824133DCEBEC0.idx  ErrorManager.cpp.BD0819AB2D2AF948.idx  ErrorManager.h.640C07B0FA1C9F5C.idx  ErrorManager.h.EC7DB68CBEF99966.idx  FontManager.cpp.82A02DA89415DDF4.idx  FontManager.cpp.BDEAF583DFB63483.idx  FontManager.h.4E6AB1A9CDA3B983.idx  FontManager.h.8D2F893B622B3480.idx  GUIElement.h.8360D57D0AFD2F50.idx  GUIElement.h.C8382A9FC2A9236D.idx  GUIManager.h.61A2381F46E9DA84.idx  GUIManager.h.E23058B851E57010.idx  InfoWindow.cpp.7B159B4F9C92014D.idx  InfoWindow.cpp.C24C16A6E0835174.idx  InfoWindow.h.A559488648FC2C86.idx  InfoWindow.h.E562CE4C7B9FDF57.idx  Label.h.4E32111D4C2A8554.idx  (+25 more)
src/: Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  main.cpp
src/Elements/: Button.h  CalendarWidget.cpp  CalendarWidget.h  CalendareWidget.cpp  CalendareWidget.h  CheckBox.h  ErrorManager.cpp  ErrorManager.h  FontManager.cpp  FontManager.h  GUIElement.h  GUIManager.h  Label.h  ScrollableList.cpp  ScrollableList.h  TextInput.h  guiElement.h  guiManager.h
src/Windows/: ArchiveWindow.cpp  ArchiveWindow.h  CreateWindow.cpp  CreateWindow.h  EditWindow.cpp  EditWindow.h  InfoWindow.cpp  InfoWindow.h  MainWindow.cpp  MainWindow.h
